fixed margin on smaller devices for login page

--- a/login/login.css
+++ b/login/login.css
@@ -75,6 +75,10 @@ body {
     border-radius: 1rem;
 }
 
+#continue-btn > h2 {
+    margin: 0.25rem 0 0.25rem 0;
+}
+
 #divider-container {
     display: flex;
     flex-direction: row;
@@ -84,8 +88,7 @@ body {
 }
 
 #divider-container > p {
-    margin-left: 5%;
-    margin-right: 5%;
+    margin: 0 5% 0 5%;
 }
 
 .divider {
@@ -100,6 +103,10 @@ body {
     color: var(--secondary);
     text-align: center;
     border-radius: 1rem;
+}
+
+#sign-up-btn > h2 {
+    margin: 0.25rem 0 0.25rem 0;
 }
 
 #right-box {
